// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Button Element renders a modal button 1`] = `
<div
  className="tribe-editor__modal-button"
>
  <button
    className="tribe-editor__button tribe-editor__modal-button__button"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`Modal Button Element renders a modal button with class 1`] = `
<div
  className="tribe-editor__modal-button test-class"
>
  <button
    className="tribe-editor__button tribe-editor__modal-button__button"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`Modal Button Element renders a modal button with label 1`] = `
<div
  className="tribe-editor__modal-button"
>
  <button
    className="tribe-editor__button tribe-editor__modal-button__button"
    onClick={[Function]}
    type="button"
  >
    Test Label
  </button>
</div>
`;

exports[`Modal Button Element renders a modal button with onClick handler 1`] = `
<div
  className="tribe-editor__modal-button"
>
  <button
    className="tribe-editor__button tribe-editor__modal-button__button"
    onClick={[Function]}
    type="button"
  />
</div>
`;
